# bayes_final_project

./: .gitignore  README.md  bayesian_regression.ipynb  demo.html  eda2.ipynb  eda_2.ipynb  pyproject.toml  requirements.txt
models/: __init__.py  bayes_kinematic.py  bayes_kinematic_hierarchical.py  bayes_kinematic_hmm.py  bayes_model_base.py  kinematic.py  kinematic_boundary.py  model_base.py  pipeline.py  play_success_base.py  play_success_bayes.py
tests/: test_abstracts.py
tools/: __init__.py  example_save_viz.py  field_plot.py  play_viz.py  tracking_utils.py
