[project]
name = "clinic-env"
version = "0.1.0"
description = "Pymc / causal / stats playground"
readme = "README.md"
requires-python = ">=3.11"

# no versions here → non-deterministic resolution
dependencies = [
  "appnope",
  "arviz",
  "asttokens",
  "attrs",
  "beautifulsoup4",
  "bleach",
  "cachetools",
  "causalgraphicalmodels",
  "certifi",
  "cffi",
  "charset-normalizer",
  "cloudpickle",
  "comm",
  "cons",
  "contourpy",
  "curl_cffi",
  "cycler",
  "debugpy",
  "decorator",
  "defusedxml",
  "etuples",
  "exceptiongroup",
  "executing",
  "fastjsonschema",
  "filelock",
  "fonttools",
  "frozendict",
  "fsspec",
  "graphviz",
  "h5netcdf",
  "h5py",
  "hm",
  "hmm",
  "hmmlearn",
  "idna",
  "importlib_metadata",
  "iniconfig",
  "ipykernel",
  "ipython",
  "ipython_pygments_lexers",
  "ipywidgets",
  "jedi",
  "Jinja2",
  "joblib",
  "jsonschema",
  "jsonschema-specifications",
  "jupyter_client",
  "jupyter_core",
  "jupyterlab_pygments",
  "jupyterlab_widgets",
  "kaggle",
  "kiwisolver",
  "logical-unification",
  "markdown-it-py",
  "MarkupSafe",
  "matplotlib",
  "matplotlib-inline",
  "mdurl",
  "miniKanren",
  "mistune",
  "mpmath",
  "multipledispatch",
  "multitasking",
  "nbclient",
  "nbconvert",
  "nbformat",
  "nest_asyncio",
  "networkx",
  "numpy",
  "opt_einsum",
  "packaging",
  "pandas",
  "pandocfilters",
  "parso",
  "patsy",
  "peewee",
  "pexpect",
  "pgmpy",
  "pickleshare",
  "pillow",
  "platformdirs",
  "pluggy",
  "prompt_toolkit",
  "protobuf",
  "psutil",
  "ptyprocess",
  "pure_eval",
  "pycparser",
  "Pygments",
  "pymc",
  "pyparsing",
  "pyro-api",
  "pyro-ppl",
  "pytensor",
  "pytest",
  "python-dateutil",
  "python-slugify",
  "pytz",
  "pyzmq",
  "referencing",
  "requests",
  "rich",
  "rpds-py",
  "scikit-learn",
  "scipy",
  "seaborn",
  "setuptools",
  "six",
  "soupsieve",
  "stack_data",
  "statsmodels",
  "sympy",
  "text-unidecode",
  "threadpoolctl",
  "tinycss2",
  "toolz",
  "torch",
  "tornado",
  "tqdm",
  "traitlets",
  "typing_extensions",
  "tzdata",
  "urllib3",
  "wcwidth",
  "webencodings",
  "widgetsnbextension",
  "xarray",
  "xarray-einstats",
  "yfinance",
  "zipp",
]

[tool.uv]
# don't generate / use a lockfile → non-deterministic across time
managed = true
